--- a/ComicList/MainWindow.xaml
+++ b/ComicList/MainWindow.xaml
@@ -1,8 +1,23 @@
-﻿<Window x:Class="ComicList.MainWindow"
+﻿<controls:MetroWindow x:Class="ComicList.MainWindow"
+        xmlns:controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
+        Title="COMICS LISTING from ComicsList.com" MinHeight="700" MinWidth="800" DataContext="{Binding Main, Source={StaticResource Locator}}"
+        xmlns:local="clr-namespace:ComicList">
     <Grid>
-        
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <local:WeeklyComicListing Grid.Column="0"></local:WeeklyComicListing>
+            <local:MySelectedTitles Grid.Column="1"></local:MySelectedTitles>
+            <local:MyTitlesThisWeek Grid.Column="2"></local:MyTitlesThisWeek>
+        </Grid>
+        <Border Background="#99000000" Visibility="{Binding IsLoadingComics, Converter={StaticResource booleanVisibilityConverter}, FallbackValue=Collapsed}">
+            <controls:ProgressRing Foreground="{DynamicResource AccentColorBrush}" IsActive="True"/>
+        </Border>
     </Grid>
-</Window>
+</controls:MetroWindow>
+
