--- a/ComicList/MainWindow.xaml
+++ b/ComicList/MainWindow.xaml
@@ -2,8 +2,13 @@
         xmlns:controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="COMICS LISTING from ComicsList.com" MinHeight="700" MinWidth="800" DataContext="{Binding Main, Source={StaticResource Locator}}"
+        Title="COMIC LISTING from ComicsList.com" MinHeight="700" MinWidth="800" DataContext="{Binding Main, Source={StaticResource Locator}}"
         xmlns:local="clr-namespace:ComicList">
+    <controls:MetroWindow.RightWindowCommands>
+        <controls:WindowCommands>
+            <Button Content="Credits" Click="ShowCredits_Click"></Button>
+        </controls:WindowCommands>
+    </controls:MetroWindow.RightWindowCommands>
     <Grid>
         <Grid>
             <Grid.ColumnDefinitions>
