--- a/ComicList/CreditsDialog.xaml
+++ b/ComicList/CreditsDialog.xaml
@@ -1,4 +1,21 @@
-﻿<UserControl x:Class="ComicList.CreditsDialog"
+﻿<!-- 
+//Weekly Comic Listing
+//Copyright (C) 2014  Adam Sills
+
+//This program is free software: you can redistribute it and/or modify
+//it under the terms of the GNU General Public License as published by
+//the Free Software Foundation, either version 3 of the License, or
+//(at your option) any later version.
+
+//This program is distributed in the hope that it will be useful,
+//but WITHOUT ANY WARRANTY; without even the implied warranty of
+//MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+//GNU General Public License for more details.
+
+//You should have received a copy of the GNU General Public License
+//along with this program.  If not, see<http://www.gnu.org/licenses/> .
+-->
+<UserControl x:Class="ComicList.CreditsDialog"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -7,15 +24,25 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid Margin="10">
-        <TextBlock>
+        <TextBlock TextWrapping="Wrap">
             <Run Text="Thanks to www.comiclist.com for this awesome list of weekly comics that powers this application."></Run>
             <Run Text="Many thanks to all the sources they get this info from also!"></Run>
             <LineBreak></LineBreak>
             <LineBreak></LineBreak>
             <Run Text="Please visit them, click their affiliate links and buy some comics."></Run>
             <LineBreak></LineBreak>
-            <LineBreak></LineBreak>
             <Hyperlink NavigateUri="http://www.comiclist.com" RequestNavigate="Hyperlink_RequestNavigate">http://www.comiclist.com</Hyperlink>
+            <LineBreak></LineBreak>
+            <LineBreak></LineBreak>
+            <Run Text="The data provided by ComicList.com used by this application uses is licensed under the Creative Commons Attribution-Noncommercial-Share Alike 3.0 United States License."></Run>
+            <LineBreak></LineBreak>
+            <Run Text="To view a copy of this license visit"></Run>
+            <Hyperlink NavigateUri="http://creativecommons.org/licenses/by-nc-sa/3.0/us/" RequestNavigate="Hyperlink_RequestNavigate">http://creativecommons.org/licenses/by-nc-sa/3.0/us/</Hyperlink>
+            <LineBreak></LineBreak>
+            <LineBreak></LineBreak>
+            <Run Text="This application is licensed under the GPL v3 and copyright Adam Sills 2014"></Run>
+            <LineBreak></LineBreak>
+            <Hyperlink NavigateUri="https://www.gnu.org/licenses/gpl.html" RequestNavigate="Hyperlink_RequestNavigate">https://www.gnu.org/licenses/gpl.html</Hyperlink>
         </TextBlock>
         
         <Button Content="close" HorizontalAlignment="Right" VerticalAlignment="Bottom" Style="{DynamicResource FlatButtonStyle}" Click="Button_Click"></Button>
