--- a/ComicList/MainWindow.xaml
+++ b/ComicList/MainWindow.xaml
@@ -1,8 +1,25 @@
-﻿<controls:MetroWindow x:Class="ComicList.MainWindow"
+﻿<!-- 
+//Weekly Comic Listing
+//Copyright (C) 2014  Adam Sills
+
+//This program is free software: you can redistribute it and/or modify
+//it under the terms of the GNU General Public License as published by
+//the Free Software Foundation, either version 3 of the License, or
+//(at your option) any later version.
+
+//This program is distributed in the hope that it will be useful,
+//but WITHOUT ANY WARRANTY; without even the implied warranty of
+//MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+//GNU General Public License for more details.
+
+//You should have received a copy of the GNU General Public License
+//along with this program.  If not, see<http://www.gnu.org/licenses/> .
+-->
+<controls:MetroWindow x:Class="ComicList.MainWindow"
         xmlns:controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="COMIC LISTING from ComicsList.com" MinHeight="700" MinWidth="800" DataContext="{Binding Main, Source={StaticResource Locator}}"
+        Title="WEEKLY COMIC LISTING" MinHeight="700" MinWidth="800" DataContext="{Binding Main, Source={StaticResource Locator}}"
         xmlns:local="clr-namespace:ComicList">
     <controls:MetroWindow.RightWindowCommands>
         <controls:WindowCommands>
