--- a/ComicList/MyTitlesThisWeek.xaml
+++ b/ComicList/MyTitlesThisWeek.xaml
@@ -28,7 +28,7 @@
                 </TextBlock>
             </Label.Content>
         </Label>
-        <Border DockPanel.Dock="Bottom" Padding="10" BorderThickness="1" BorderBrush="DarkGray">
+        <Border DockPanel.Dock="Bottom" Padding="10" BorderThickness="1" BorderBrush="DarkGray" Height="150">
             <StackPanel Orientation="Vertical">
                 <Button Content="Save to text file" Command="{Binding SaveMyTitlesCommand}" Style="{StaticResource AccentedSquareButtonStyle}"></Button>
             </StackPanel>
