--- a/ComicList/WeeklyComicListing.xaml
+++ b/ComicList/WeeklyComicListing.xaml
@@ -31,13 +31,17 @@
                 <ComboBox Grid.Column="1" ItemsSource="{Binding ComicLists}" SelectedItem="{Binding SelectedComicList}" DisplayMemberPath="Title" VerticalAlignment="Center" HorizontalAlignment="Stretch"></ComboBox>
                 <Button Grid.Column="2" Content="Load" Command="{Binding LoadWeeklyComicsCommand}" Style="{StaticResource AccentedSquareButtonStyle}" VerticalAlignment="Center" Margin="5,0"></Button>
             </Grid>
-            <Border DockPanel.Dock="Bottom" Padding="10" BorderThickness="1" BorderBrush="DarkGray">
+            <Border DockPanel.Dock="Bottom" Padding="10" BorderThickness="1" BorderBrush="DarkGray" Height="150">
                 <StackPanel Orientation="Vertical">
                     <CheckBox Content="Omit Variant Covers" IsChecked="{Binding OmitVariantCovers}" Margin="4"></CheckBox>
                     <CheckBox Content="Show First Print Only" IsChecked="{Binding FirstPrintOnly}" Margin="4"></CheckBox>
-                    <TextBox Grid.Column="0" x:Name="ComicNameFilter" controls:TextboxHelper.ClearTextButton="True" controls:TextboxHelper.Watermark="Enter filter terms and press enter to filter">
+                    <TextBox Grid.Column="0" x:Name="ComicNameFilter"
+                             Text="{Binding FilterText, UpdateSourceTrigger=PropertyChanged}"
+                             controls:TextboxHelper.ClearTextButton="True" 
+                             controls:TextboxHelper.Watermark="Enter filter text and press enter to filter" 
+                             controls:TextboxHelper.ButtonCommand="{Binding ClearFilterTextCommand}">
                         <TextBox.InputBindings>
-                            <KeyBinding Key="Enter" Command="{Binding FilterCurrentListCommand}" CommandParameter="{Binding Text, ElementName=ComicNameFilter}"/>
+                            <KeyBinding Key="Enter" Command="{Binding RefreshCurrentListCommand}" CommandParameter="{Binding Text, ElementName=ComicNameFilter}"/>
                         </TextBox.InputBindings>
                     </TextBox>
                     <Button Content="Refresh" Command="{Binding RefreshCurrentListCommand}" Style="{StaticResource AccentedSquareButtonStyle}"></Button>
