--- a/ComicList/WeeklyComicListing.xaml
+++ b/ComicList/WeeklyComicListing.xaml
@@ -19,7 +19,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro">
-    <Grid>
+    <Grid x:Name="root">
         <DockPanel LastChildFill="True">
             <Grid DockPanel.Dock="Top">
                 <Grid.ColumnDefinitions>
@@ -31,10 +31,20 @@
                 <ComboBox Grid.Column="1" ItemsSource="{Binding ComicLists}" SelectedItem="{Binding SelectedComicList}" DisplayMemberPath="Title" VerticalAlignment="Center" HorizontalAlignment="Stretch"></ComboBox>
                 <Button Grid.Column="2" Content="Load" Command="{Binding LoadWeeklyComicsCommand}" Style="{StaticResource AccentedSquareButtonStyle}" VerticalAlignment="Center" Margin="5,0"></Button>
             </Grid>
-            <Border DockPanel.Dock="Bottom" Padding="10" BorderThickness="1" BorderBrush="DarkGray" Height="150">
+            <Border DockPanel.Dock="Bottom" Padding="10" BorderThickness="1" BorderBrush="DarkGray" Height="175">
                 <StackPanel Orientation="Vertical">
-                    <CheckBox Content="Omit Variant Covers" IsChecked="{Binding OmitVariantCovers}" Margin="4"></CheckBox>
-                    <CheckBox Content="Show First Print Only" IsChecked="{Binding FirstPrintOnly}" Margin="4"></CheckBox>
+                    <StackPanel Orientation="Vertical">
+                        <CheckBox Content="Omit Variant Covers" IsChecked="{Binding OmitVariantCovers}" Margin="4"></CheckBox>
+                        <CheckBox Content="Show First Print Only" IsChecked="{Binding FirstPrintOnly}" Margin="4"></CheckBox>
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="Auto"/>
+                            </Grid.ColumnDefinitions>
+                            <CheckBox Content="Filter Publishers" IsChecked="{Binding FilterPublishers}" Margin="4"></CheckBox>
+                            <Button Content="Set Publishers" Style="{StaticResource SquareButtonStyle}" Grid.Column="1" VerticalAlignment="Top" Command="{Binding ShowPublisherFilterCommand}"></Button>
+                        </Grid>
+                    </StackPanel>
                     <TextBox Grid.Column="0" x:Name="ComicNameFilter"
                              Text="{Binding FilterText, UpdateSourceTrigger=PropertyChanged}"
                              controls:TextboxHelper.ClearTextButton="True" 
@@ -76,5 +86,26 @@
                 </ListView.GroupStyle>
             </ListView>
         </DockPanel>
+
+        <controls:FlyoutsControl>
+            <controls:Flyout Header="Filter Publishers" Position="Left" IsOpen="{Binding ShowPublisherFilter, Mode=TwoWay}" Width="{Binding ActualWidth, ElementName=root}" Theme="Dark">
+                <Grid Margin="10">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
+                    <ScrollViewer>
+                        <ItemsControl ItemsSource="{Binding AvailablePublishers}">
+                            <ItemsControl.ItemTemplate>
+                                <DataTemplate>
+                                    <CheckBox Content="{Binding Entity}" Margin="2" IsChecked="{Binding IsSelected, Mode=TwoWay}"></CheckBox>
+                                </DataTemplate>
+                            </ItemsControl.ItemTemplate>
+                        </ItemsControl>
+                    </ScrollViewer>
+                    <Button Content="Save" Grid.Row="1" Style="{StaticResource SquareButtonStyle}" Margin="10" VerticalAlignment="Center" HorizontalAlignment="Stretch" Command="{Binding SavePublisherFilterCommand}"></Button>
+                </Grid>
+            </controls:Flyout>
+        </controls:FlyoutsControl>
     </Grid>
 </UserControl>
