--- a/ComicList/MainWindow.xaml
+++ b/ComicList/MainWindow.xaml
@@ -20,7 +20,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="WEEKLY COMIC LISTING" MinHeight="700" MinWidth="800" DataContext="{Binding Main, Source={StaticResource Locator}}"
-        xmlns:local="clr-namespace:ComicList" WindowState="Maximized">
+        xmlns:local="clr-namespace:ComicList" WindowState="Maximized" Icon="comic-list.ico">
     <controls:MetroWindow.RightWindowCommands>
         <controls:WindowCommands>
             <Button Content="Options" Click="ShowOptions_Click"></Button>
